// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer should render the actions and the dropdown accordingly 1`] = `
<div
  className="Actions-actionContainer-2"
>
  <HvButton
    category="ghost"
    className="Actions-button-1"
    disabled={false}
    id="-0-action-view"
    key="-0-action-view"
    onClick={[Function]}
    startIcon={null}
  >
    View
  </HvButton>
  <WithStyles(DropDownMenu)
    classes={
      Object {
        "root": "Actions-dropDownMenu-3",
      }
    }
    dataList={
      Array [
        Object {
          "icon": undefined,
          "iconCallback": undefined,
          "id": "delete",
          "label": "Delete",
        },
        Object {
          "disabled": true,
          "icon": undefined,
          "iconCallback": undefined,
          "id": "update",
          "label": "Update",
        },
      ]
    }
    disablePortal={false}
    disabled={false}
    expanded={false}
    icon={
      <ForwardRef(WithStyles)
        className="Actions-dropDownMenuIcon-4"
      />
    }
    keepOpened={false}
    onClick={[Function]}
    placement="left"
  />
</div>
`;

exports[`Footer should render the actions and the dropdown accordingly 2`] = `
<div
  className="Actions-actionContainer-2"
>
  <WithStyles(DropDownMenu)
    classes={
      Object {
        "root": "Actions-dropDownMenu-3",
      }
    }
    dataList={
      Array [
        Object {
          "icon": undefined,
          "iconCallback": undefined,
          "id": "view",
          "label": "View",
        },
        Object {
          "icon": undefined,
          "iconCallback": undefined,
          "id": "delete",
          "label": "Delete",
        },
        Object {
          "disabled": true,
          "icon": undefined,
          "iconCallback": undefined,
          "id": "update",
          "label": "Update",
        },
      ]
    }
    disablePortal={false}
    disabled={false}
    expanded={false}
    icon={
      <ForwardRef(WithStyles)
        className="Actions-dropDownMenuIcon-4"
      />
    }
    keepOpened={false}
    onClick={[Function]}
    placement="left"
  />
</div>
`;

exports[`Footer should render the actions and the dropdown accordingly 3`] = `
<div
  className="Actions-actionContainer-2"
>
  <HvButton
    category="ghost"
    className="Actions-button-1"
    disabled={false}
    id="-0-action-view"
    key="-0-action-view"
    onClick={[Function]}
    startIcon={null}
  >
    View
  </HvButton>
  <HvButton
    category="ghost"
    className="Actions-button-1"
    disabled={false}
    id="-1-action-delete"
    key="-1-action-delete"
    onClick={[Function]}
    startIcon={null}
  >
    Delete
  </HvButton>
  <WithStyles(DropDownMenu)
    classes={
      Object {
        "root": "Actions-dropDownMenu-3",
      }
    }
    dataList={
      Array [
        Object {
          "disabled": true,
          "icon": undefined,
          "iconCallback": undefined,
          "id": "update",
          "label": "Update",
        },
      ]
    }
    disablePortal={false}
    disabled={false}
    expanded={false}
    icon={
      <ForwardRef(WithStyles)
        className="Actions-dropDownMenuIcon-4"
      />
    }
    keepOpened={false}
    onClick={[Function]}
    placement="left"
  />
</div>
`;
